--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,6 +17,8 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "vite": "^4.1.0"
   }
 }
